# Django-app

./: Dockerfile  db.sqlite3  devices.csv  docker-compose.yaml  pyproject.toml  quieries.sql  requirements.txt  textfile.txt
siteek/: db.sqlite3  log.txt  log.txt.1  log.txt.2  manage.py  requirements.txt  shopapp-fictures.json  shopapp-product-fixtures.xml  shopapp-products-fixtures.json
siteek/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
siteek/blogapp/migrations/: 0001_initial.py
siteek/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
siteek/locale/en/LC_MESSAGES/: django.mo  django.po
siteek/locale/ru/LC_MESSAGES/: django.mo  django.po
siteek/myapiapp/: urls.py  views.py
siteek/myauth/: models.py  tests.py  urls.py  views.py
siteek/myauth/management/commands/: bind_user.py
siteek/myauth/migrations/: 0001_initial.py
siteek/myauth/templates/myauth/: about-me.html  (+2 more)
siteek/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
siteek/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
siteek/shopapp/fixtures/: products-fixture.json
siteek/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_order_receipt.py  0008_product_preview.py  0009_productimage.py  0010_alter_product_description_alter_product_name.py
siteek/siteek/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
(+24 files in other folders)
